Fixed line blockquote letter spacing

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -83,10 +83,6 @@ h6,.h6{
 blockquote{
   font-family: inherit;
   font-size: 100%;
-<<<<<<< HEAD
-=======
-  letter-spacing: .25px;
->>>>>>> 98968edb6e1d4bc662f30d42743d72b754c4941f
   padding: 0px 0px 0px 13px;
   margin-bottom: 0px;
 }
